# xai_autonomy_object_explainer

./: .catkin_workspace  .gitignore  README.md
src/: CMakeLists.txt
src/xai_driving_explainer/: CMakeLists.txt  package.xml
src/xai_driving_explainer/config/: default.yaml
src/xai_driving_explainer/docs/: project_strategy.md
src/xai_driving_explainer/launch/: xai_driving_explainer.launch
src/xai_driving_explainer/scripts/: auto_calibrate_camera_lidar_charuco.py  build_bag_event_index.py  calibrate_camera_intrinsic_charuco.py  driving_camera_overlay_viewer.py  driving_scene_detector_node.py  driving_vlm_inference_node.py  driving_vlm_prompt_builder.py  tune_camera_lidar_extrinsic.py  xai_driving_explainer_node.py  yolo_ultralytics_worker.py
vlm_teacher_distill/: README.md
