<?xml version="1.0"?>
<package format="2">
  <name>xai_driving_explainer</name>
  <version>0.1.0</version>
  <description>Planner-grounded driving explanation project for rosbag and live ROS streams.</description>

  <maintainer email="byeongjae@example.com">byeongjae</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>rosbag</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

  <export/>
</package>
